<resources>
    <string name="app_name">Aqours</string>
    <string name="open_nav">Open Navigation</string>
    <string name="close_nav">Close Navigation</string>
    <string name="home">Home</string>
    <string name="person">Person</string>
    <string name="image">Aqours Image</string>
    <string name="music_solo">Music Solo</string>
    <string name="story">Story</string>
    <string name="music_group">Music Group</string>
    <string name="navbar_name">Aqours Leader: Chika-chan</string>
    <string-array name="image_name">

        <item>Takami Chika</item>
        <item>Sakurauchi Riko</item>
        <item>Matsuura Kanan</item>
        <item>Kurosawa Dia</item>
        <item>Watanabe You</item>
        <item>Tsushima Yoshiko</item>
        <item>Kunikida Hanamaru</item>
        <item>Ohara Mari</item>
        <item>Kurosawa Ruby</item>

    </string-array>
    <string-array name="image_sub_group">

        <item>CYaRon!</item>
        <item>Guilty Kiss</item>
        <item>AZALEA</item>
        <item>AZALEA</item>
        <item>CYaRon!</item>
        <item>Guilty Kiss</item>
        <item>AZALEA</item>
        <item>Guilty Kiss</item>
        <item>CYaRon!</item>

    </string-array>
    <string-array name="image_school_years">

        <item>2nd year</item>
        <item>2nd year</item>
        <item>3rd year</item>
        <item>3rd year</item>
        <item>2nd year</item>
        <item>1st year</item>
        <item>1st year</item>
        <item>3rd year</item>
        <item>1st year</item>

    </string-array>
    <string-array name="image_birthday">

        <item>August 1</item>
        <item>September 19</item>
        <item>February 10</item>
        <item>January 1</item>
        <item>April 17</item>
        <item>July 13</item>
        <item>March 4</item>
        <item>June 13</item>
        <item>September 21</item>

    </string-array>
    <string name="astrological_sign">Astrological Sign</string>
    <string-array name="image_blood_type">

        <item>B</item>
        <item>A</item>
        <item>O</item>
        <item>A</item>
        <item>AB</item>
        <item>O</item>
        <item>O</item>
        <item>AB</item>
        <item>A</item>

    </string-array>
    <string-array name="image_height">

        <item>1m 57cm</item>
        <item>1m 60cm</item>
        <item>1m 62cm</item>
        <item>1m 62cm</item>
        <item>1m 57cm</item>
        <item>1m 56cm</item>
        <item>1m 52cm</item>
        <item>1m 63cm</item>
        <item>1m 54cm</item>

    </string-array>
</resources>